--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "expo": {
     "name": "Müzifay",
-    "slug": "muzifay",
+    "slug": "144aba66-f2ab-4e35-9fcf-a02d7b961925",
     "version": "1.0.0",
     "orientation": "portrait",
     "platforms": ["ios", "android"],
