--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "cli": {
-    "version": ">= 3.0.0"
+    "version": ">= 3.0.0",
+    "appVersionSource": "local"
   },
   "build": {
     "production": {
@@ -10,4 +11,3 @@
     }
   }
 }
-
