--- a/app.json
+++ b/app.json
@@ -1,16 +1,25 @@
-{
-  "expo": {
-    "name": "Müzifay",
-    "slug": "muzifay-offical",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "platforms": ["ios", "android"],
-    "jsEngine": "hermes",
-    "icon": "./assets/icon.png",
+i
 
-    "android": {
       "package": "com.muzifay.app",
-      "versionCode": 1
+      "versionCode": 1,
+      "config": {
+        "googleMaps": {
+          "apiKey": "EXAMPLE-MAPS-KEY"
+        },
+        "keystore": {
+          "keystorePath": "./android/my-release-key.jks",
+          "keystorePassword": “Atalay4511",
+          "keyAlias": "Muzifaykey",
+          "keyPassword": "Atalay4511”
+
+
+
+
+
+
+D"
+        }
+      }
     },
 
     "ios": {
@@ -23,7 +32,4 @@
         "projectId": "144aba66-f2ab-4e35-9fcf-a02d7b961925"
       }
     }
-  }
-}
-
-
+  
